Fixed issue with the profile avator being in wrong place and cards being mis aligned

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -8,7 +8,7 @@
 
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   object-fit: cover;
   display: block;
 }
@@ -31,6 +31,6 @@
 
 @media screen and (max-width: 672px) {
   .card__image {
-    height: 413px;
+    height: 288px;
   }
 }
